--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,12 @@
   <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
 </head>
 <body>
-  <div class="prose">
-    {{ content }}
+  <div class="flex flex-col items-stretch justify-center min-h-screen font-sans">
+    <main class="items-center w-full flex-1 px-20 text-center">
+      <div class="prose">
+        {{ content }}
+      </div>
+    </main>
   </div>
 </body>
 </html>
