--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
+  <link href="https://cdnjs.com/prismjs@v1.x/themes/prism.css" rel="stylesheet" />
 </head>
 <body>
   <div class="flex flex-col items-stretch justify-center min-h-screen font-sans">
@@ -13,5 +14,8 @@
       </div>
     </main>
   </div>
+  <script src="https://cdnjs.com/prismjs@v1.x/components/prism-core.min.js"></script>
+	<script src="https://cdnjs.com/prismjs@v1.x/plugins/autoloader/prism-autoloader.min.js"></script>
+</body>
 </body>
 </html>
