--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="flex flex-col items-stretch justify-center min-h-screen font-sans">
-    <main class="items-center w-full flex-1 px-20 text-center">
+    <main class="items-center w-full flex-1 px-20">
       <div class="prose">
         {{ content }}
       </div>
